Feat: portfolio update setup

--- a/Candellum/index.html
+++ b/Candellum/index.html
@@ -80,115 +80,10 @@
         <div id="Projectssection" class="sectionblock">
             <div class="container ">
                 <div class="abouthero">
-                    <h3 style="white-space: nowrap;text-align: left;">Trailblazers</h3>
+                    <h3 style="white-space: nowrap;text-align: left;">Sheep Seeker</h3>
                 </div>
                 <br>
-
-                <div class="row">
-                    <div class="col-lg-8 text-center text-lg-left">
-                        <img width="714" height="471" src="images/JDR_Aubergine-01.png" />
-                    </div>
-                    <div class="col-lg-4 text-center text-lg-left">
-                        <div class="abouthero">
-                            <p class="paragraph"><strong> Trailblazers</strong> is a <strong>role-playing</strong> game
-                            based on the theme of the "World After". <br><br>Players take on the role of Trailblazers,
-                            mercenaries who have to explore a hostile planet called Uthea, where they have to survive
-                            and leave once they have achieved their objectives.</p>
-                            <a target="_blank" href="pdf/JDR_Aubergine.pdf" class="btn linkbtn aboutlink aboutlinkLogo">
-                                See Rules (PDF)
-                            </a>
-                            <br>
-                            <br>
-                            <a target="_blank" href="pdf/FICHE_PERSO_Aubergine_ADAM-JESEN.pdf" class="btn linkbtn aboutlink aboutlinkLogo">
-                                See Characters (PDF)
-                            </a>
-                            <img class="image-icon-little"
-                                src="https://cdn-icons-png.flaticon.com/512/731/731965.png" />
-                        </div>
-                    </div>
-                </div>
-
-                <br>
-                <br>
-                <div class="abouthero">
-                    <h3 style="white-space: nowrap;text-align: left; font-size: 30px;">What I learnt</h3>
-                    <br>
-                    <ul>
-                        <li>This project was in paper format, so we didn't have any technical constraints linked to
-                            video games. However, it's difficult to know which direction to take. Working as a group was
-                            a real challenge for everyone</li>
-                        <li>We discovered the role of narrative designer, which is both very free and very
-                            complicated. I really enjoyed this first experience of narrative design.</li>
-                        <li>We weren't in direct contact with the artists, then we had to create a document of intent so
-                            that they could use it to illustrate our game.</li>
-                    </ul>
-                </div>
-
-                <br>
-                <br>
-                <div class="abouthero">
-                    <h3 style="white-space: nowrap;text-align: left; font-size: 30px;">Team</h3>
-                    <br>
-                    <ul>
-                        <li>Game designer | <a target="_blank"
-                                href="https://www.linkedin.com/in/baptiste-wisdorff-6421a821b/">Baptiste WISDORFF</a>
-                        </li>
-                        <li>Game designer | <a target="_blank"
-                                href="https://www.linkedin.com/in/guillaume-courcelaud-b6a595222/">Guillaume COURCELAUD</a>
-                        </li>
-                        <li>Game designer | Hery RANDRIANARISON </li>
-                        <li>Game designer | <a target="_blank"
-                                href="https://www.linkedin.com/in/rayan-jaber-17381a231/">Rayan JABER</a>
-                        </li>
-                        <li>Game designer | <a target="_blank"
-                                href="https://www.linkedin.com/in/lahayethms/">Thomas LAHAYE</a>
-                        </li>
-                        <li>Game Artist | Quentin EUNG</li>
-                        <li>Game Artist | Louise JANIN-LOPEZ</li>
-                        <li>Game Artist | Pauline ROLLET</li>
-                        <li>Game Artist | Eugène CAUBEL</li>
-                        <li>Game Artist | Céline TRUONG</li>
-                        <li>Game Artist | Felix BAKA DUNN</li>
-                        
-                    </ul>
-                    </p>
-                </div>
-
-                <br>
-                <br>
-                <div class="abouthero">
-                    <h3 style="white-space: nowrap;text-align: left; font-size: 30px;">Screenshots</h3>
-                    <!-- Gallery -->
-                    <div class="row">
-                        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-                            <img src="images/JDR_Aubergine-05.png"
-                                class="w-100 shadow-1-strong rounded mb-4 imgGallery" />
-                            <img src="images/JDR_Aubergine-13-c.png"
-                                class="w-100 shadow-1-strong rounded mb-4 imgGallery" />
-
-                        </div>
-
-                        <div class="col-lg-4 mb-4 mb-lg-0">
-                            <img src="images/JDR_Aubergine-16.png"
-                                class="w-100 shadow-1-strong rounded mb-4 imgGallery" />
-                            <img src="images/JDR_Aubergine-13.png"
-                                class="w-100 shadow-1-strong rounded mb-4 imgGallery" />
-                        </div>
-
-                        <div class="col-lg-4 mb-4 mb-lg-0">
-                            <img src="images/JDR_Aubergine-27.png"
-                                class="w-100 shadow-1-strong rounded mb-4 imgGallery" />
-
-                        </div>
-                    </div>
-                    <!-- The Modal -->
-                    <div id="myModal" class="modal">
-                        <img class="modal-content" id="img01">
-                        <div id="caption"></div>
-                        <!-- Gallery -->
-                    </div>
-
-                </div>
+                Page in work in progress
             </div>
 
             <!-- contact section -->
