--- a/index.html
+++ b/index.html
@@ -243,6 +243,84 @@
         <div id="Projectssection" class="sectionblock">
             <div class="container ">
                 <div class="abouthero" style="padding-top: 30px;">
+                    <h3 style="white-space: nowrap;text-align: left;" id="projectText">Projects - 2025 - Today</h3>
+                </div>
+                <div class="row">
+                    <div class="text-left text-lg-left col-lg-6" style="margin-top: 60px;">          
+                        <h3 class="mt-3 wrapservice__title"> Candellum.</h3>
+                        <br>
+                        <a href="/Candellum/">
+                            <img class="hearderImage" src="asset/portfolio/candleKnight.png" />
+                        </a>
+                        <p class="paragraph">Candellum is a <strong>Hack'n Slash</strong> game where the player controls a candle knight who gradually burns down and risks extinguishing. To prolong its life, it <strong>steals</strong> the wax from its enemies.
+                        </p>
+                        <p><i>My roles:</i>
+                            <ul>
+                                <li>Combat designer</li>
+                                <li>Game designer</li>
+                            </ul>
+                        </p>
+                        <p><i>Duration:</i><br>
+                            <ul>
+                                <li>8 months</li>
+                                <li>September 2024 - May 2025</li>
+                            </ul>
+                        </p>
+                        <p>Platform:<br>
+                            <ul>
+                                <li>PS4/PS5</li>
+                            </ul>
+                        </p>
+                        <a href="/Candellum" class="btn linkbtn aboutlink aboutlinkLogo">
+                            More informations
+                        </a>
+                        <div class="iconsLittlesContainer">
+                            <img class="image-icon-little"
+                                src="https://cdn.worldvectorlogo.com/logos/unreal-1.svg" />
+                        </div>
+                    </div>
+                    <div class="text-left text-lg-left col-lg-6" style="margin-top: 60px;">  
+                        <h3 class="mt-3 wrapservice__title"> Sheep Seeker.</h3>
+                        <br>
+                        <a href="/SheepSeeker/">
+                            <img class="hearderImage" src="asset/portfolio/SheepSeeker.png" />
+                        </a>
+
+                        <p class="paragraph">Sheep Seeker is a <strong>COOP</strong>, fast-paced, 3D platformer where you race through dynamic levels to catch every sheep as fast as possible with a friend or solo.</p>
+                        <p><i>My roles:</i>
+                            <ul>
+                                <li>Game designer</li>
+                                <li>Programmer</li>
+                                <li>Level designer</li>
+                                <li>UX designer</li>
+                            </ul>
+                        </p>
+                        <p><i>Duration:</i><br>
+                            <ul>
+                                <li>1 year</li>
+                                <li>June 2024 - July 2025</li>
+                            </ul>
+                        </p>
+                        <p>Platform:<br>
+                            <ul>
+                                <li> PC</li>
+                            </ul>
+                        </p>
+                        <a href="/SheepSeeker" class="btn linkbtn aboutlink aboutlinkLogo">
+                            More informations
+                        </a>
+                        <a target="_blank" href="https://store.steampowered.com/app/3113650/Sheep_Seeker/?l=french"
+                            class="btn linkbtn aboutlink aboutlinkLogo">
+                            Try here
+                        </a>
+                        <div class="iconsLittlesContainer">
+                            <img class="image-icon-little"
+                                src="https://cdn-icons-png.flaticon.com/512/5969/5969205.png" />
+                            <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" />
+                        </div>
+                    </div>
+                </div>
+                <div class="abouthero" style="padding-top: 30px;">
                     <h3 style="white-space: nowrap;text-align: left;" id="projectText">Projects - 2023/2024</h3>
                 </div>
                 <div class="row">
@@ -272,7 +350,7 @@
                             </ul>
                         </p>
                         <a href="/LaVilleRose" class="btn linkbtn aboutlink aboutlinkLogo">
-                            More information
+                            More informations
                         </a>
                         <a target="_blank" href="https://drive.google.com/file/d/1gr2hH8kr56qMGRiwTaX5SslO88uNtEi1/view?usp=sharing"
                             class="btn linkbtn aboutlink aboutlinkLogo">
@@ -315,7 +393,7 @@
                             </ul>
                         </p>
                         <a href="/TendersFight" class="btn linkbtn aboutlink aboutlinkLogo">
-                            More information
+                            More informations
                         </a>
                         <a target="_blank" href="https://store.steampowered.com/app/2374010/Tenders_Fight/"
                             class="btn linkbtn aboutlink aboutlinkLogo">
@@ -352,7 +430,7 @@
                             </ul>
                         </p>
                         <a target="_blank" href="https://medium.com/@menardisaac/how-i-created-a-new-cuphead-boss-a6f71f8687c2" class="btn linkbtn aboutlink aboutlinkLogo">
-                            More information
+                            More informations
                         </a>
                         <a target="_blank" href="https://is02ac.itch.io/cuphead-fan-boss"
                             class="btn linkbtn aboutlink aboutlinkLogo">
@@ -384,7 +462,7 @@
                             </ul>
                         </p>
                         <a target="_blank" href="https://medium.com/@menardisaac/making-a-sekiro-like-combat-design-boss-3f2909c6487d" class="btn linkbtn aboutlink aboutlinkLogo">
-                            More information
+                            More informations
                         </a>
                         <a target="_blank" href="https://is02ac.itch.io/cuphead-fan-boss"
                             class="btn linkbtn aboutlink aboutlinkLogo">
@@ -424,7 +502,7 @@
                             </ul>
                         </p>
                         <a href="/KotaroSRenvenge" class="btn linkbtn aboutlink aboutlinkLogo">
-                            More information
+                            More informations
                         </a>
                         <a target="_blank" href="https://moussa-neggaz.itch.io/kotaros-revenge"
                             class="btn linkbtn aboutlink aboutlinkLogo">
@@ -471,7 +549,7 @@
                         </p>
 
                         <a href="/Soulbound" class="btn linkbtn aboutlink aboutlinkLogo">
-                            More information
+                            More informations
                         </a>
                         <div class="iconsLittlesContainer">
                             <img class="image-icon-little"
@@ -513,7 +591,7 @@
                         </p>
 
                         <a href="/RollerRush" class="btn linkbtn aboutlink aboutlinkLogo">
-                            More information
+                            More informations
                         </a>
                         <a target="_blank" href="https://is02ac.itch.io/roller-rush-street-shift"
                             class="btn linkbtn aboutlink aboutlinkLogo">
@@ -561,7 +639,7 @@
                         </p>
 
                         <a href="/Trailblazers/" class="btn linkbtn aboutlink aboutlinkLogo">
-                            More information
+                            More informations
                         </a>
                         <div class="iconsLittlesContainer">
                             <img class="image-icon-little"
@@ -599,7 +677,7 @@
                         </p>
 
                         <a href="/SpaceDriver" class="btn linkbtn aboutlink aboutlinkLogo">
-                            More information
+                            More informations
                         </a>
                         <a target="_blank" href="https://is02ac.itch.io/space-driver"
                             class="btn linkbtn aboutlink aboutlinkLogo">
